# AIReceipt-Tracker

./: .env.example  .gitignore  README.md  note.db  pyproject.toml  run-agent.sh
src/receipt_scanner/: models.py
src/receipt_scanner/agent/: main.py
src/receipt_scanner/eyes/: main.py
src/receipt_scanner/fastapi/: database.py  eyes.py  main.py  models.py
src/receipt_scanner/fastapi/models/: receipt.py  user.py
src/receipt_scanner/fastapi/routers/: stats.py
